--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -18,6 +18,11 @@ voila
 pandas==0.25.2
 xlrd==1.2.0 # For importing xls files
 
+# Data Visualization
+plotly==4.2.1
+seaborn==0.9.0
+matplotlib==3.1.1
+
 # Utils
 # ------------------------------------------------------------------------------
 invoke==1.3.0 # Invoke is a Python task execution tool & library. See http://www.pyinvoke.org/
